--- a/Tp3-Formularios/login.html
+++ b/Tp3-Formularios/login.html
@@ -1,26 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ingresá</title>
-</head>
-<body>
+  </head>
+
+  <body>
+    <header>
+        <a href="./Home.html">
+            <img
+              src="Imagenes/logo-mercado-liebre.svg"
+              alt="Logo de mercado liebre"
+            />
+          </a>
+      <p>Lugar para poner la barra de busqueda</p>
+      <p><b>Comprá</b> en cuotas y sin tarjeta de crédiro</p>
+
+      <nav>
+        <ul>
+          <li><a href="#">Ofertas</a></li>
+          <li><a href="#">Tiendas Oficiales</a></li>
+          <li><a href="#">Vender</a></li>
+          <li><a href="#">Ayuda</a></li>
+
+          <li><a href="./register.html">Creá tu cuenta</a></li>
+          <li><a href="#">Mis compras</a></li>
+          
+        </ul>
+        <img src="./Imagenes/img-home-banner.jpg" alt="imagen banner" />
+      </nav>
+    </header>
+
     <h1>Ingresá</h1>
 
+    <form method="get">
+      <label for="nombre">Nombre de usuari@</label>
+      <input type="text" name="name" id="nombre" />
 
-    <form>
+      <label for="password">Contraseña</label>
+      <input type="password" name="contra" id="password" />
 
-        <label for="nombre">Nombre de usuari@</label>
-        <input type="text" name="name" id="nombre">
-        <br><br>
-
-        <label for="password">Contraseña</label>
-        <input type="password" name="contra" id="password">
-        <br><br>
-
-        <a href="../Tp2-Mercado-Liebre/Home.html">Enviar</a>
-
+      <a href="../Tp2-Mercado-Liebre/Home.html">Enviar</a>
     </form>
-</body>
+    <footer>
+      <div>
+        <h3><b>Pagá con tarjeta o en efectivo</b></h3>
+        <p>
+          Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
+          efectivo en puntos de pago. ¡Y siempre es seguro!
+        </p>
+      </div>
+      <div>
+        <h3><b>Envío gratis desde $ 2.500</b></h3>
+        <p>
+          Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
+          miles de productos. Es un beneficio de Mercado Puntos.
+        </p>
+      </div>
+      <div>
+        <h3><b>Seguridad, de principio a fin</b></h3>
+        <p>
+          ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas
+          hacer, porque estás siempre protegid@.
+        </p>
+      </div>
+      <div>
+        <h3><b>Copyright © 1999-2020 MercadoLiebre S.R.L.</b></h3>
+        <h4><b>Pagá con tu tarjeta o en efectivo</b></h4>
+        <p>
+          Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivo
+          en puntos de pago. !Y siempre es seguro!
+        </p>
+        <h4><b>Envío gratis desde los $2500</b></h4>
+        <p>
+          Solo por estar registrado en Mercado Liebre tenés envíos gratis en
+          miles de productos. Es un beneficio de Mercado Puntos
+        </p>
+        <h4><b>Seguridad de Principio a fin</b></h4>
+        <p>
+          ¿No te gusta? !Devolvelo!En Mercado Liebre, no hay nada que no puedas
+          hacer, porque estás siempre protegid@.
+        </p>
+        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+      </div>
+    </footer>
+  </body>
 </html>
