Subiendo cambios adaptativos tp5

--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <button><i class="fa-solid fa-magnifying-glass"></i></button>
       </div>
     
-    <i class="fa-solid fa-hand-holding-dollar"></i><p>Comprá en cuotas y sin tarjeta de crédiro</p>
+      <h4 class="comprar"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédiro</h4>
 
 
       <nav class="nav-bar">
