--- a/register.html
+++ b/register.html
@@ -24,7 +24,7 @@
       <button><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
 
-    <p><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédiro</p>
+    <h4 class="comprar"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédiro</h4>
 
     <nav>
       <ul>
