--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         <button><i class="fa-solid fa-magnifying-glass"></i></button>
       </div>
     
-      <h4 class="comprar"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédiro</h4>
+      <h4 class="comprar"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</h4>
 
 
       <nav class="nav-bar">
@@ -42,7 +42,7 @@
         <div class="burger-menu">
           <i class="fa-solid fa-bars"></i>
         </div>
-        <img src="./Imagenes/img-home-banner.jpg" alt="imagen banner">
+        <img src="./Imagenes/img-home-banner.jpg" alt="imagen banner" class="img_banner">
       </nav>
     </header>
 
